# booklovers-social-network

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/alembic/: alembic.ini  env.py
app/alembic/versions/: 06296ff57006_initial_migration.py  330210ab1844_models_create.py  4f958eb3a908_user_model_update.py  67a914e208f0_little_fix_for_reviews_and_books.py  90c0c215fb6f_new_table_naming_style.py  a09f21335062_initial_migration.py  c2f95fb71ee4_new_table_naming_style.py  c89b0f5432b5_initial.py  fc58f28152ea_modified_comments_model.py
app/api/v1/endpoints/: auth.py  books.py  reviews.py  users.py
app/auth/: auth_backend.py  database.py
app/core/: config.py
app/crud/: books.py  reviews.py
app/db/: base.py  session.py
app/db/models/: books.py  comments.py  reviews.py  users.py
app/schemas/: books.py  reviews.py  users.py
app/user_manager/: user_manager.py
app/utils/: camel_to_snake.py
