[project]
name = "booklovers-social-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.8",
    "psycopg>=3.2.4",
    "psycopg-binary>=3.2.4",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.38",
]
